[gd_scene load_steps=18 format=4 uid="uid://1ir37sker0bk"]

[ext_resource type="PackedScene" uid="uid://bfh3rp63q7s5b" path="res://scenes/player.tscn" id="1_vqknd"]
[ext_resource type="Script" uid="uid://bfch6htfxwqjf" path="res://scenes/lvl.gd" id="1_w245d"]
[ext_resource type="PackedScene" uid="uid://b7jb2ax3u1xah" path="res://scenes/test_plat.tscn" id="2_0k3uw"]
[ext_resource type="PackedScene" uid="uid://gi4rqrcwggcr" path="res://scenes/enemy.tscn" id="3_ljibk"]
[ext_resource type="Texture2D" uid="uid://dqbpnsojmjf7v" path="res://Assets/Background1.png" id="5_0o530"]
[ext_resource type="Texture2D" uid="uid://v7w00fdeek7g" path="res://Assets/Buildings3.png" id="6_s5vkl"]
[ext_resource type="Texture2D" uid="uid://4f617v6ikeaq" path="res://Assets/Buildings2.png" id="7_d474t"]
[ext_resource type="Texture2D" uid="uid://b2r45cxq8gwkl" path="res://Assets/Buildings1.png" id="8_4nwc7"]
[ext_resource type="Script" uid="uid://b0j0f7jxv30ae" path="res://scenes/spawner.gd" id="9_s5vkl"]
[ext_resource type="Script" uid="uid://cf0y4jg6hg3xe" path="res://scenes/spawner_2.gd" id="10_d474t"]
[ext_resource type="Texture2D" uid="uid://dele6eyum10w" path="res://Assets/TileMap.png" id="11_4nwc7"]
[ext_resource type="Texture2D" uid="uid://52ooawi5ex5t" path="res://Assets/Cave.png" id="12_h8j34"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0c7m"]
size = Vector2(104, 203)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h8j34"]
texture = ExtResource("11_4nwc7")
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
4:1/0/terrain_set = 0
5:1/0 = 0
5:1/0/terrain_set = 0
6:1/0 = 0
6:1/0/terrain_set = 0
7:1/0 = 0
7:1/0/terrain_set = 0
8:1/0 = 0
8:1/0/terrain_set = 0
9:1/0 = 0
9:1/0/terrain_set = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
4:2/0/terrain_set = 0
5:2/0 = 0
5:2/0/terrain_set = 0
6:2/0 = 0
6:2/0/terrain_set = 0
7:2/0 = 0
7:2/0/terrain_set = 0
8:2/0 = 0
8:2/0/terrain_set = 0
9:2/0 = 0
9:2/0/terrain_set = 0
4:3/0 = 0
4:3/0/terrain_set = 0
5:3/0 = 0
5:3/0/terrain_set = 0
6:3/0 = 0
6:3/0/terrain_set = 0
7:3/0 = 0
7:3/0/terrain_set = 0
8:3/0 = 0
8:3/0/terrain_set = 0
9:3/0 = 0
9:3/0/terrain_set = 0
1:4/0 = 0
2:4/0 = 0
5:4/0 = 0
5:4/0/terrain_set = 0
6:4/0 = 0
6:4/0/terrain_set = 0
7:4/0 = 0
7:4/0/terrain_set = 0
8:4/0 = 0
8:4/0/terrain_set = 0
1:5/0 = 0
2:5/0 = 0
1:7/0 = 0
2:7/0 = 0
2:8/0 = 0
1:10/0 = 0
2:10/0 = 0
1:11/0 = 0
1:13/0 = 0
2:13/0 = 0
1:14/0 = 0
2:14/0 = 0
1:16/0 = 0
2:16/0 = 0
1:17/0 = 0
2:17/0 = 0
3:19/0 = 0
4:19/0 = 0
3:20/0 = 0
4:20/0 = 0
1:22/0 = 0
2:22/0 = 0
4:22/0 = 0
5:22/0 = 0
1:23/0 = 0
2:23/0 = 0
4:23/0 = 0
5:23/0 = 0

[sub_resource type="TileSet" id="TileSet_rv0fw"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_h8j34")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4nwc7"]
size = Vector2(57, 101)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8j34"]
size = Vector2(95, 18.25)

[node name="Lvl" type="Node2D"]
script = ExtResource("1_w245d")

[node name="Parallax" type="Node2D" parent="."]
position = Vector2(600, 450)

[node name="Parallax2D2" type="Parallax2D" parent="Parallax"]
texture_filter = 1
scroll_scale = Vector2(0.1, 0.1)
repeat_size = Vector2(600, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D2"]
position = Vector2(0, -120)
texture = ExtResource("5_0o530")

[node name="Parallax2D5" type="Parallax2D" parent="Parallax"]
scroll_scale = Vector2(0, 0)
repeat_size = Vector2(2510, 0)
repeat_times = 3

[node name="ColorRect" type="ColorRect" parent="Parallax/Parallax2D5"]
offset_left = -925.0
offset_top = -736.0
offset_right = 1585.0
offset_bottom = 418.0
color = Color(0.03137255, 0.20392157, 0.29803923, 0.46666667)

[node name="Parallax2D3" type="Parallax2D" parent="Parallax"]
texture_filter = 1
scroll_scale = Vector2(0.3, 0.3)
repeat_size = Vector2(300, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D3"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_s5vkl")
offset = Vector2(0, -120)

[node name="Parallax2D4" type="Parallax2D" parent="Parallax"]
texture_filter = 1
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(300, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D4"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_d474t")
offset = Vector2(0, -80)

[node name="Parallax2D" type="Parallax2D" parent="Parallax"]
texture_filter = 1
scroll_scale = Vector2(0.7, 0.7)
repeat_size = Vector2(300, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="Parallax/Parallax2D"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_4nwc7")

[node name="Player" parent="." instance=ExtResource("1_vqknd")]
position = Vector2(311, 567)

[node name="Enemy" parent="." instance=ExtResource("3_ljibk")]
position = Vector2(667, 425)

[node name="testPlat" parent="." instance=ExtResource("2_0k3uw")]
position = Vector2(-45, 590)

[node name="Arena1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arena1"]
position = Vector2(960, 478.5)
shape = SubResource("RectangleShape2D_h0c7m")

[node name="Spawner" type="Marker2D" parent="Arena1"]
position = Vector2(841, 481)
script = ExtResource("9_s5vkl")

[node name="Spawner2" type="Marker2D" parent="Arena1"]
position = Vector2(1076, 482)
script = ExtResource("10_d474t")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD5/yQAAAAFAAEAAAD5/yUAAAAFAAIAAAD5/yYAAAAFAAMAAAD6/yQAAAAGAAEAAAD6/yUAAAAGAAIAAAD6/yYAAAAGAAMAAAD7/yQAAAAHAAEAAAD7/yUAAAAHAAIAAAD7/yYAAAAHAAMAAAD8/yQAAAAIAAEAAAD8/yUAAAAIAAIAAAD8/yYAAAAIAAMAAAD9/yQAAAAFAAEAAAD9/yUAAAAFAAIAAAD9/yYAAAAFAAMAAAD+/yQAAAAGAAEAAAD+/yUAAAAGAAIAAAD+/yYAAAAGAAMAAAD//yQAAAAHAAEAAAD//yUAAAAHAAIAAAD//yYAAAAHAAMAAAAAACQAAAAIAAEAAAAAACUAAAAIAAIAAAAAACYAAAAIAAMAAAABACQAAAAFAAEAAAABACUAAAAFAAIAAAABACYAAAAFAAMAAAACACQAAAAGAAEAAAACACUAAAAGAAIAAAACACYAAAAGAAMAAAADACQAAAAHAAEAAAADACUAAAAHAAIAAAADACYAAAAHAAMAAAAEACQAAAAIAAEAAAAEACUAAAAIAAIAAAAEACYAAAAIAAMAAAAFACQAAAAFAAEAAAAFACUAAAAFAAIAAAAFACYAAAAFAAMAAAAGACQAAAAGAAEAAAAGACUAAAAGAAIAAAAGACYAAAAGAAMAAAAHACQAAAAHAAEAAAAHACUAAAAHAAIAAAAHACYAAAAHAAMAAAAIACQAAAAIAAEAAAAIACUAAAAIAAIAAAAIACYAAAAIAAMAAAAJACQAAAAFAAEAAAAJACUAAAAFAAIAAAAJACYAAAAFAAMAAAAKACQAAAAGAAEAAAAKACUAAAAGAAIAAAAKACYAAAAGAAMAAAALACQAAAAHAAEAAAALACUAAAAHAAIAAAALACYAAAAHAAMAAAAMACQAAAAIAAEAAAAMACUAAAAIAAIAAAAMACYAAAAIAAMAAAANACQAAAAFAAEAAAANACUAAAAFAAIAAAANACYAAAAFAAMAAAAOACQAAAAGAAEAAAAOACUAAAAGAAIAAAAOACYAAAAGAAMAAAAPACQAAAAHAAEAAAAPACUAAAAHAAIAAAAPACYAAAAHAAMAAAAQACQAAAAIAAEAAAAQACUAAAAIAAIAAAAQACYAAAAIAAMAAAARACQAAAAFAAEAAAARACUAAAAFAAIAAAARACYAAAAFAAMAAAASACQAAAAGAAEAAAASACUAAAAGAAIAAAASACYAAAAGAAMAAAATACQAAAAHAAEAAAATACUAAAAHAAIAAAATACYAAAAHAAMAAAAUACQAAAAIAAEAAAAUACUAAAAIAAIAAAAUACYAAAAIAAMAAAAVACQAAAAFAAEAAAAVACUAAAAFAAIAAAAVACYAAAAFAAMAAAAWACQAAAAGAAEAAAAWACUAAAAGAAIAAAAWACYAAAAGAAMAAAAXACQAAAAHAAEAAAAXACUAAAAHAAIAAAAXACYAAAAHAAMAAAAYACQAAAAIAAEAAAAYACUAAAAIAAIAAAAYACYAAAAIAAMAAAAZACQAAAAFAAEAAAAZACUAAAAFAAIAAAAZACYAAAAFAAMAAAAaACQAAAAGAAEAAAAaACUAAAAGAAIAAAAaACYAAAAGAAMAAAAbACQAAAAHAAEAAAAbACUAAAAHAAIAAAAbACYAAAAHAAMAAAAcACQAAAAIAAEAAAAcACUAAAAIAAIAAAAcACYAAAAIAAMAAAAdACQAAAAFAAEAAAAdACUAAAAFAAIAAAAdACYAAAAFAAMAAAAeACQAAAAGAAEAAAAeACUAAAAGAAIAAAAeACYAAAAGAAMAAAAfACQAAAAHAAEAAAAfACUAAAAHAAIAAAAfACYAAAAHAAMAAAAgACQAAAAIAAEAAAAgACUAAAAIAAIAAAAgACYAAAAIAAMAAAAhACQAAAAFAAEAAAAhACUAAAAFAAIAAAAhACYAAAAFAAMAAAAiACQAAAAGAAEAAAAiACUAAAAGAAIAAAAiACYAAAAGAAMAAAAjACQAAAAHAAEAAAAjACUAAAAHAAIAAAAjACYAAAAHAAMAAAAkACQAAAAIAAEAAAAkACUAAAAIAAIAAAAkACYAAAAIAAMAAAAlACQAAAAFAAEAAAAlACUAAAAFAAIAAAAlACYAAAAFAAMAAAAmACQAAAAGAAEAAAAmACUAAAAGAAIAAAAmACYAAAAGAAMAAAAnACQAAAAHAAEAAAAnACUAAAAHAAIAAAAnACYAAAAHAAMAAAAoACQAAAAIAAEAAAAoACUAAAAIAAIAAAAoACYAAAAIAAMAAAApACQAAAAFAAEAAAApACUAAAAFAAIAAAApACYAAAAFAAMAAAAqACQAAAAGAAEAAAAqACUAAAAGAAIAAAAqACYAAAAGAAMAAAArACQAAAAHAAEAAAArACUAAAAHAAIAAAArACYAAAAHAAMAAAAsACQAAAAIAAEAAAAsACUAAAAIAAIAAAAsACYAAAAIAAMAAAAtACQAAAAFAAEAAAAtACUAAAAFAAIAAAAtACYAAAAFAAMAAAAuACQAAAAGAAEAAAAuACUAAAAGAAIAAAAuACYAAAAGAAMAAAAvACQAAAAHAAEAAAAvACUAAAAHAAIAAAAvACYAAAAHAAMAAAAwACQAAAAIAAEAAAAwACUAAAAIAAIAAAAwACYAAAAIAAMAAAAxACQAAAAFAAEAAAAxACUAAAAFAAIAAAAxACYAAAAFAAMAAAAyACQAAAAGAAEAAAAyACUAAAAGAAIAAAAyACYAAAAGAAMAAAAzACQAAAAHAAEAAAAzACUAAAAHAAIAAAAzACYAAAAHAAMAAAA0ACQAAAAIAAEAAAA0ACUAAAAIAAIAAAA0ACYAAAAIAAMAAAA1ACQAAAAFAAEAAAA1ACUAAAAFAAIAAAA1ACYAAAAFAAMAAAA2ACQAAAAGAAEAAAA2ACUAAAAGAAIAAAA2ACYAAAAGAAMAAAA3ACQAAAAHAAEAAAA3ACUAAAAHAAIAAAA3ACYAAAAHAAMAAAA4ACQAAAAIAAEAAAA4ACUAAAAIAAIAAAA4ACYAAAAIAAMAAAA5ACQAAAAFAAEAAAA5ACUAAAAFAAIAAAA5ACYAAAAFAAMAAAA6ACQAAAAGAAEAAAA6ACUAAAAGAAIAAAA6ACYAAAAGAAMAAAA7ACQAAAAHAAEAAAA7ACUAAAAHAAIAAAA7ACYAAAAHAAMAAAA8ACQAAAAIAAEAAAA8ACUAAAAIAAIAAAA8ACYAAAAIAAMAAAA9ACQAAAAFAAEAAAA9ACUAAAAFAAIAAAA9ACYAAAAFAAMAAAA+ACQAAAAGAAEAAAA+ACUAAAAGAAIAAAA+ACYAAAAGAAMAAAA/ACQAAAAHAAEAAAA/ACUAAAAHAAIAAAA/ACYAAAAHAAMAAABAACQAAAAIAAEAAABAACUAAAAIAAIAAABAACYAAAAIAAMAAABBACQAAAAFAAEAAABBACUAAAAFAAIAAABBACYAAAAFAAMAAABCACQAAAAGAAEAAABCACUAAAAGAAIAAABCACYAAAAGAAMAAABDACQAAAAHAAEAAABDACUAAAAHAAIAAABDACYAAAAHAAMAAABEACQAAAAIAAEAAABEACUAAAAIAAIAAABEACYAAAAIAAMAAABFACQAAAAFAAEAAABFACUAAAAFAAIAAABFACYAAAAFAAMAAABGACQAAAAGAAEAAABGACUAAAAGAAIAAABGACYAAAAGAAMAAABHACQAAAAHAAEAAABHACUAAAAHAAIAAABHACYAAAAHAAMAAABIACQAAAAIAAEAAABIACUAAAAIAAIAAABIACYAAAAIAAMAAABJACQAAAAFAAEAAABJACUAAAAFAAIAAABJACYAAAAFAAMAAABKACQAAAAGAAEAAABKACUAAAAGAAIAAABKACYAAAAGAAMAAABLACQAAAAHAAEAAABLACUAAAAHAAIAAABLACYAAAAHAAMAAABMACQAAAAIAAEAAABMACUAAAAIAAIAAABMACYAAAAIAAMAAABNACQAAAAFAAEAAABNACUAAAAFAAIAAABNACYAAAAFAAMAAABOACQAAAAGAAEAAABOACUAAAAGAAIAAABOACYAAAAGAAMAAABPACQAAAAHAAEAAABPACUAAAAHAAIAAABPACYAAAAHAAMAAABQACQAAAAIAAEAAABQACUAAAAIAAIAAABQACYAAAAIAAMAAABRACQAAAAFAAEAAABRACUAAAAFAAIAAABRACYAAAAFAAMAAABSACQAAAAGAAEAAABSACUAAAAGAAIAAABSACYAAAAGAAMAAABTACQAAAAHAAEAAABTACUAAAAHAAIAAABTACYAAAAHAAMAAABUACQAAAAIAAEAAABUACUAAAAIAAIAAABUACYAAAAIAAMAAABVACQAAAAFAAEAAABVACUAAAAFAAIAAABVACYAAAAFAAMAAABWACQAAAAGAAEAAABWACUAAAAGAAIAAABWACYAAAAGAAMAAABXACQAAAAHAAEAAABXACUAAAAHAAIAAABXACYAAAAHAAMAAABYACQAAAAIAAEAAABYACUAAAAIAAIAAABYACYAAAAIAAMAAABZACQAAAAFAAEAAABZACUAAAAFAAIAAABZACYAAAAFAAMAAABaACQAAAAGAAEAAABaACUAAAAGAAIAAABaACYAAAAGAAMAAABbACQAAAAHAAEAAABbACUAAAAHAAIAAABbACYAAAAHAAMAAABcACQAAAAIAAEAAABcACUAAAAIAAIAAABcACYAAAAIAAMAAABdACQAAAAFAAEAAABdACUAAAAFAAIAAABdACYAAAAFAAMAAABeACQAAAAGAAEAAABeACUAAAAGAAIAAABeACYAAAAGAAMAAABfACQAAAAHAAEAAABfACUAAAAHAAIAAABfACYAAAAHAAMAAABgACQAAAAIAAEAAABgACUAAAAIAAIAAABgACYAAAAIAAMAAABhACQAAAAFAAEAAABhACUAAAAFAAIAAABhACYAAAAFAAMAAABiACQAAAAGAAEAAABiACUAAAAGAAIAAABiACYAAAAGAAMAAABjACQAAAAHAAEAAABjACUAAAAHAAIAAABjACYAAAAHAAMAAABkACQAAAAIAAEAAABkACUAAAAIAAIAAABkACYAAAAIAAMAAABlACQAAAAFAAEAAABlACUAAAAFAAIAAABlACYAAAAFAAMAAABmACQAAAAGAAEAAABmACUAAAAGAAIAAABmACYAAAAGAAMAAABnACQAAAAHAAEAAABnACUAAAAHAAIAAABnACYAAAAHAAMAAABoACQAAAAIAAEAAABoACUAAAAIAAIAAABoACYAAAAIAAMAAABpACQAAAAFAAEAAABpACUAAAAFAAIAAABpACYAAAAFAAMAAABqACQAAAAGAAEAAABqACUAAAAGAAIAAABqACYAAAAGAAMAAABrACQAAAAHAAEAAABrACUAAAAHAAIAAABrACYAAAAHAAMAAABsACQAAAAIAAEAAABsACUAAAAIAAIAAABsACYAAAAIAAMAAABtACQAAAAFAAEAAABtACUAAAAFAAIAAABtACYAAAAFAAMAAABuACQAAAAGAAEAAABuACUAAAAGAAIAAABuACYAAAAGAAMAAABvACQAAAAHAAEAAABvACUAAAAHAAIAAABvACYAAAAHAAMAAABwACQAAAAIAAEAAABwACUAAAAIAAIAAABwACYAAAAIAAMAAABxACQAAAAFAAEAAABxACUAAAAFAAIAAABxACYAAAAFAAMAAAByACQAAAAGAAEAAAByACUAAAAGAAIAAAByACYAAAAGAAMAAABzACQAAAAHAAEAAABzACUAAAAHAAIAAABzACYAAAAHAAMAAAB0ACQAAAAIAAEAAAB0ACUAAAAIAAIAAAB0ACYAAAAIAAMAAAB1ACQAAAAFAAEAAAB1ACUAAAAFAAIAAAB1ACYAAAAFAAMAAAB2ACQAAAAGAAEAAAB2ACUAAAAGAAIAAAB2ACYAAAAGAAMAAAB3ACQAAAAHAAEAAAB3ACUAAAAHAAIAAAB3ACYAAAAHAAMAAAB4ACQAAAAIAAEAAAB4ACUAAAAIAAIAAAB4ACYAAAAIAAMAAAB5ACQAAAAFAAEAAAB5ACUAAAAFAAIAAAB5ACYAAAAFAAMAAAB6ACQAAAAGAAEAAAB6ACUAAAAGAAIAAAB6ACYAAAAGAAMAAAB7ACQAAAAHAAEAAAB7ACUAAAAHAAIAAAB7ACYAAAAHAAMAAAB8ACQAAAAIAAEAAAB8ACUAAAAIAAIAAAB8ACYAAAAIAAMAAAB9ACQAAAAFAAEAAAB9ACUAAAAFAAIAAAB9ACYAAAAFAAMAAAB+ACQAAAAGAAEAAAB+ACUAAAAGAAIAAAB+ACYAAAAGAAMAAAB/ACQAAAAHAAEAAAB/ACUAAAAHAAIAAAB/ACYAAAAHAAMAAACAACQAAAAIAAEAAACAACUAAAAIAAIAAACAACYAAAAIAAMAAACBACQAAAAFAAEAAACBACUAAAAFAAIAAACBACYAAAAFAAMAAACCACQAAAAGAAEAAACCACUAAAAGAAIAAACCACYAAAAGAAMAAACDACQAAAAHAAEAAACDACUAAAAHAAIAAACDACYAAAAHAAMAAACEACQAAAAIAAEAAACEACUAAAAIAAIAAACEACYAAAAIAAMAAACFACQAAAAFAAEAAACFACUAAAAFAAIAAACFACYAAAAFAAMAAACGACQAAAAGAAEAAACGACUAAAAGAAIAAACGACYAAAAGAAMAAACHACQAAAAHAAEAAACHACUAAAAHAAIAAACHACYAAAAHAAMAAACIACQAAAAIAAEAAACIACUAAAAIAAIAAACIACYAAAAIAAMAAACJACQAAAAFAAEAAACJACUAAAAFAAIAAACJACYAAAAFAAMAAACKACQAAAAGAAEAAACKACUAAAAGAAIAAACKACYAAAAGAAMAAACLACQAAAAHAAEAAACLACUAAAAHAAIAAACLACYAAAAHAAMAAACMACQAAAAIAAEAAACMACUAAAAIAAIAAACMACYAAAAIAAMAAACNACQAAAAFAAEAAACNACUAAAAFAAIAAACNACYAAAAFAAMAAACOACQAAAAGAAEAAACOACUAAAAGAAIAAACOACYAAAAGAAMAAACPACQAAAAHAAEAAACPACUAAAAHAAIAAACPACYAAAAHAAMAAACQACQAAAAIAAEAAACQACUAAAAIAAIAAACQACYAAAAIAAMAAACRACQAAAAFAAEAAACRACUAAAAFAAIAAACRACYAAAAFAAMAAACSACQAAAAGAAEAAACSACUAAAAGAAIAAACSACYAAAAGAAMAAACTACQAAAAHAAEAAACTACUAAAAHAAIAAACTACYAAAAHAAMAAACUACQAAAAIAAEAAACUACUAAAAIAAIAAACUACYAAAAIAAMAAACVACQAAAAFAAEAAACVACUAAAAFAAIAAACVACYAAAAFAAMAAACWACQAAAAGAAEAAACWACUAAAAGAAIAAACWACYAAAAGAAMAAACXACQAAAAHAAEAAACXACUAAAAHAAIAAACXACYAAAAHAAMAAACYACQAAAAIAAEAAACYACUAAAAIAAIAAACYACYAAAAIAAMAAACZACQAAAAFAAEAAACZACUAAAAFAAIAAACZACYAAAAFAAMAAACaACQAAAAGAAEAAACaACUAAAAGAAIAAACaACYAAAAGAAMAAACbACQAAAAHAAEAAACbACUAAAAHAAIAAACbACYAAAAHAAMAAACcACQAAAAIAAEAAACcACUAAAAIAAIAAACcACYAAAAIAAMAAACZACcAAAAFAAMAAACaACcAAAAGAAMAAACbACcAAAAHAAMAAACcACcAAAAIAAMAAACVACcAAAAFAAMAAACWACcAAAAGAAMAAACXACcAAAAHAAMAAACYACcAAAAIAAMAAACRACcAAAAFAAMAAACSACcAAAAGAAMAAACTACcAAAAHAAMAAACUACcAAAAIAAMAAACNACcAAAAFAAMAAACOACcAAAAGAAMAAACPACcAAAAHAAMAAACQACcAAAAIAAMAAACJACcAAAAFAAMAAACKACcAAAAGAAMAAACLACcAAAAHAAMAAACMACcAAAAIAAMAAACFACcAAAAFAAMAAACGACcAAAAGAAMAAACHACcAAAAHAAMAAACIACcAAAAIAAMAAACBACcAAAAFAAMAAACCACcAAAAGAAMAAACDACcAAAAHAAMAAACEACcAAAAIAAMAAAB9ACcAAAAFAAMAAAB+ACcAAAAGAAMAAAB/ACcAAAAHAAMAAACAACcAAAAIAAMAAAB5ACcAAAAFAAMAAAB6ACcAAAAGAAMAAAB7ACcAAAAHAAMAAAB8ACcAAAAIAAMAAAB1ACcAAAAFAAMAAAB2ACcAAAAGAAMAAAB3ACcAAAAHAAMAAAB4ACcAAAAIAAMAAABxACcAAAAFAAMAAAByACcAAAAGAAMAAABzACcAAAAHAAMAAAB0ACcAAAAIAAMAAABtACcAAAAFAAMAAABuACcAAAAGAAMAAABvACcAAAAHAAMAAABwACcAAAAIAAMAAABpACcAAAAFAAMAAABqACcAAAAGAAMAAABrACcAAAAHAAMAAABsACcAAAAIAAMAAABlACcAAAAFAAMAAABmACcAAAAGAAMAAABnACcAAAAHAAMAAABoACcAAAAIAAMAAABhACcAAAAFAAMAAABiACcAAAAGAAMAAABjACcAAAAHAAMAAABkACcAAAAIAAMAAABdACcAAAAFAAMAAABeACcAAAAGAAMAAABfACcAAAAHAAMAAABgACcAAAAIAAMAAABZACcAAAAFAAMAAABaACcAAAAGAAMAAABbACcAAAAHAAMAAABcACcAAAAIAAMAAABVACcAAAAFAAMAAABWACcAAAAGAAMAAABXACcAAAAHAAMAAABYACcAAAAIAAMAAABRACcAAAAFAAMAAABSACcAAAAGAAMAAABTACcAAAAHAAMAAABUACcAAAAIAAMAAABNACcAAAAFAAMAAABOACcAAAAGAAMAAABPACcAAAAHAAMAAABQACcAAAAIAAMAAABJACcAAAAFAAMAAABKACcAAAAGAAMAAABLACcAAAAHAAMAAABMACcAAAAIAAMAAABFACcAAAAFAAMAAABGACcAAAAGAAMAAABHACcAAAAHAAMAAABIACcAAAAIAAMAAABBACcAAAAFAAMAAABCACcAAAAGAAMAAABDACcAAAAHAAMAAABEACcAAAAIAAMAAAA9ACcAAAAIAAMAAAA+ACcAAAAGAAMAAAA/ACcAAAAHAAMAAABAACcAAAAIAAMAAAA6ACcAAAAFAAMAAAA7ACcAAAAGAAMAAAA8ACcAAAAHAAMAAAA2ACcAAAAFAAMAAAA3ACcAAAAGAAMAAAA4ACcAAAAHAAMAAAA5ACcAAAAIAAMAAAAyACcAAAAFAAMAAAAzACcAAAAGAAMAAAA0ACcAAAAHAAMAAAA1ACcAAAAIAAMAAAAuACcAAAAFAAMAAAAvACcAAAAGAAMAAAAwACcAAAAHAAMAAAAxACcAAAAIAAMAAAAqACcAAAAFAAMAAAArACcAAAAGAAMAAAAsACcAAAAHAAMAAAAtACcAAAAIAAMAAAAmACcAAAAFAAMAAAAnACcAAAAGAAMAAAAoACcAAAAHAAMAAAApACcAAAAIAAMAAAAiACcAAAAFAAMAAAAjACcAAAAGAAMAAAAkACcAAAAHAAMAAAAlACcAAAAIAAMAAAAiACgAAAAGAAMAAAAjACgAAAAHAAMAAAAkACgAAAAIAAMAAAAlACgAAAAFAAMAAAAeACcAAAAFAAMAAAAfACcAAAAGAAMAAAAgACcAAAAHAAMAAAAhACcAAAAIAAMAAAAaACcAAAAFAAMAAAAbACcAAAAGAAMAAAAcACcAAAAHAAMAAAAdACcAAAAIAAMAAAAWACcAAAAFAAMAAAAXACcAAAAGAAMAAAAYACcAAAAHAAMAAAAZACcAAAAIAAMAAAASACcAAAAFAAMAAAATACcAAAAGAAMAAAAUACcAAAAHAAMAAAAVACcAAAAIAAMAAAAOACcAAAAFAAMAAAAPACcAAAAGAAMAAAAQACcAAAAHAAMAAAARACcAAAAIAAMAAAAKACcAAAAFAAMAAAALACcAAAAGAAMAAAAMACcAAAAHAAMAAAANACcAAAAIAAMAAAAGACcAAAAFAAMAAAAHACcAAAAGAAMAAAAIACcAAAAHAAMAAAAJACcAAAAIAAMAAAACACcAAAAFAAMAAAADACcAAAAGAAMAAAAEACcAAAAHAAMAAAAFACcAAAAIAAMAAAD+/ycAAAAFAAMAAAD//ycAAAAGAAMAAAAAACcAAAAHAAMAAAABACcAAAAIAAMAAAD6/ycAAAAGAAMAAAD7/ycAAAAHAAMAAAD8/ycAAAAIAAMAAAD9/ycAAAAIAAMAAAD5/ycAAAAFAAMAAAD5/ygAAAAFAAMAAAD6/ygAAAAGAAMAAAD7/ygAAAAHAAMAAAD8/ygAAAAIAAMAAAD9/ygAAAAFAAMAAAD+/ygAAAAGAAMAAAD//ygAAAAHAAMAAAAAACgAAAAIAAMAAAABACgAAAAFAAMAAAACACgAAAAGAAMAAAADACgAAAAHAAMAAAAEACgAAAAIAAMAAAAFACgAAAAFAAMAAAAGACgAAAAGAAMAAAAHACgAAAAHAAMAAAAIACgAAAAIAAMAAAAJACgAAAAFAAMAAAAKACgAAAAGAAMAAAALACgAAAAHAAMAAAAMACgAAAAIAAMAAAANACgAAAAFAAMAAAAOACgAAAAGAAMAAAAPACgAAAAHAAMAAAAQACgAAAAIAAMAAAARACgAAAAFAAMAAAASACgAAAAGAAMAAAATACgAAAAHAAMAAAAUACgAAAAIAAMAAAAVACgAAAAFAAMAAAAWACgAAAAGAAMAAAAXACgAAAAHAAMAAAAYACgAAAAIAAMAAAAZACgAAAAFAAMAAAAaACgAAAAGAAMAAAAbACgAAAAHAAMAAAAcACgAAAAIAAMAAAAdACgAAAAFAAMAAAAeACgAAAAGAAMAAAAfACgAAAAHAAMAAAAgACgAAAAIAAMAAAAhACgAAAAFAAMAAAAmACgAAAAGAAMAAAAnACgAAAAHAAMAAAAoACgAAAAIAAMAAAApACgAAAAFAAMAAAAqACgAAAAGAAMAAAArACgAAAAHAAMAAAAsACgAAAAIAAMAAAApACkAAAAFAAMAAAAqACkAAAAGAAMAAAArACkAAAAHAAMAAAAsACkAAAAIAAMAAAAlACkAAAAFAAMAAAAmACkAAAAGAAMAAAAnACkAAAAHAAMAAAAoACkAAAAIAAMAAAAhACkAAAAFAAMAAAAiACkAAAAGAAMAAAAjACkAAAAHAAMAAAAkACkAAAAIAAMAAAAdACkAAAAFAAMAAAAeACkAAAAGAAMAAAAfACkAAAAHAAMAAAAgACkAAAAIAAMAAAAZACkAAAAFAAMAAAAaACkAAAAGAAMAAAAbACkAAAAHAAMAAAAcACkAAAAIAAMAAAAVACkAAAAFAAMAAAAWACkAAAAGAAMAAAAXACkAAAAHAAMAAAAYACkAAAAIAAMAAAARACkAAAAFAAMAAAASACkAAAAGAAMAAAATACkAAAAHAAMAAAAUACkAAAAIAAMAAAANACkAAAAFAAMAAAAOACkAAAAGAAMAAAAPACkAAAAHAAMAAAAQACkAAAAIAAMAAAAJACkAAAAFAAMAAAAKACkAAAAGAAMAAAALACkAAAAHAAMAAAAMACkAAAAIAAMAAAAFACkAAAAFAAMAAAAGACkAAAAGAAMAAAAHACkAAAAHAAMAAAAIACkAAAAIAAMAAAABACkAAAAFAAMAAAACACkAAAAGAAMAAAADACkAAAAHAAMAAAAEACkAAAAIAAMAAAD9/ykAAAAFAAMAAAD+/ykAAAAGAAMAAAD//ykAAAAHAAMAAAAAACkAAAAIAAMAAAD5/ykAAAAFAAMAAAD6/ykAAAAGAAMAAAD7/ykAAAAHAAMAAAD8/ykAAAAIAAMAAAD5/yoAAAAFAAMAAAD6/yoAAAAGAAMAAAD7/yoAAAAHAAMAAAD8/yoAAAAIAAMAAAD9/yoAAAAFAAMAAAD+/yoAAAAGAAMAAAD//yoAAAAHAAMAAAAAACoAAAAIAAMAAAABACoAAAAFAAMAAAACACoAAAAGAAMAAAADACoAAAAHAAMAAAAEACoAAAAIAAMAAAANACoAAAAFAAMAAAAOACoAAAAGAAMAAAAPACoAAAAHAAMAAAAQACoAAAAIAAMAAAAJACoAAAAFAAMAAAAKACoAAAAGAAMAAAALACoAAAAHAAMAAAAMACoAAAAIAAMAAAAFACoAAAAFAAMAAAAGACoAAAAGAAMAAAAHACoAAAAHAAMAAAAIACoAAAAIAAMAAAARACoAAAAFAAMAAAASACoAAAAGAAMAAAATACoAAAAHAAMAAAAUACoAAAAIAAMAAAAVACoAAAAFAAMAAAAWACoAAAAGAAMAAAAXACoAAAAHAAMAAAAYACoAAAAIAAMAAAAZACoAAAAFAAMAAAAaACoAAAAGAAMAAAAbACoAAAAHAAMAAAAcACoAAAAIAAMAAAAdACoAAAAFAAMAAAAeACoAAAAGAAMAAAAfACoAAAAHAAMAAAAgACoAAAAIAAMAAAAhACoAAAAFAAMAAAAiACoAAAAGAAMAAAAjACoAAAAHAAMAAAAkACoAAAAIAAMAAAAlACoAAAAFAAMAAAAmACoAAAAGAAMAAAAnACoAAAAHAAMAAAAoACoAAAAIAAMAAAApACoAAAAFAAMAAAAqACoAAAAGAAMAAAArACoAAAAHAAMAAAAsACoAAAAIAAMAAAAtACgAAAAFAAMAAAAuACgAAAAGAAMAAAAvACgAAAAHAAMAAAAwACgAAAAIAAMAAAAtACkAAAAFAAMAAAAuACkAAAAGAAMAAAAvACkAAAAHAAMAAAAwACkAAAAIAAMAAAAtACoAAAAFAAMAAAAuACoAAAAGAAMAAAAvACoAAAAHAAMAAAAwACoAAAAIAAMAAAAxACgAAAAFAAMAAAAyACgAAAAGAAMAAAAzACgAAAAHAAMAAAA0ACgAAAAIAAMAAAAxACkAAAAFAAMAAAAyACkAAAAGAAMAAAAzACkAAAAHAAMAAAA0ACkAAAAIAAMAAAAxACoAAAAFAAMAAAAyACoAAAAGAAMAAAAzACoAAAAHAAMAAAA0ACoAAAAIAAMAAAA1ACgAAAAFAAMAAAA2ACgAAAAGAAMAAAA3ACgAAAAHAAMAAAA4ACgAAAAIAAMAAAA1ACkAAAAFAAMAAAA2ACkAAAAGAAMAAAA3ACkAAAAHAAMAAAA4ACkAAAAIAAMAAAA1ACoAAAAFAAMAAAA2ACoAAAAGAAMAAAA3ACoAAAAHAAMAAAA4ACoAAAAIAAMAAAA5ACgAAAAFAAMAAAA6ACgAAAAGAAMAAAA7ACgAAAAHAAMAAAA8ACgAAAAIAAMAAAA5ACkAAAAFAAMAAAA6ACkAAAAGAAMAAAA7ACkAAAAHAAMAAAA8ACkAAAAIAAMAAAA5ACoAAAAFAAMAAAA6ACoAAAAGAAMAAAA7ACoAAAAHAAMAAAA8ACoAAAAIAAMAAAA9ACgAAAAFAAMAAAA+ACgAAAAGAAMAAAA/ACgAAAAHAAMAAABAACgAAAAIAAMAAAA9ACkAAAAFAAMAAAA+ACkAAAAGAAMAAAA/ACkAAAAHAAMAAABAACkAAAAIAAMAAAA9ACoAAAAFAAMAAAA+ACoAAAAGAAMAAAA/ACoAAAAHAAMAAABAACoAAAAIAAMAAABBACgAAAAFAAMAAABCACgAAAAGAAMAAABDACgAAAAHAAMAAABEACgAAAAIAAMAAABBACkAAAAFAAMAAABCACkAAAAGAAMAAABDACkAAAAHAAMAAABEACkAAAAIAAMAAABBACoAAAAFAAMAAABCACoAAAAGAAMAAABDACoAAAAHAAMAAABEACoAAAAIAAMAAABFACgAAAAFAAMAAABGACgAAAAGAAMAAABHACgAAAAHAAMAAABIACgAAAAIAAMAAABFACkAAAAFAAMAAABGACkAAAAGAAMAAABHACkAAAAHAAMAAABIACkAAAAIAAMAAABFACoAAAAFAAMAAABGACoAAAAGAAMAAABHACoAAAAHAAMAAABIACoAAAAIAAMAAABJACgAAAAFAAMAAABKACgAAAAGAAMAAABLACgAAAAHAAMAAABMACgAAAAFAAMAAABJACkAAAAFAAMAAABKACkAAAAGAAMAAABLACkAAAAHAAMAAABMACkAAAAIAAMAAABJACoAAAAFAAMAAABKACoAAAAGAAMAAABLACoAAAAHAAMAAABMACoAAAAIAAMAAABNACgAAAAFAAMAAABOACgAAAAGAAMAAABPACgAAAAHAAMAAABQACgAAAAIAAMAAABNACkAAAAFAAMAAABOACkAAAAGAAMAAABPACkAAAAHAAMAAABQACkAAAAIAAMAAABNACoAAAAFAAMAAABOACoAAAAGAAMAAABPACoAAAAHAAMAAABQACoAAAAIAAMAAABRACoAAAAFAAMAAABSACoAAAAGAAMAAABTACoAAAAHAAMAAABUACoAAAAIAAMAAABRACkAAAAFAAMAAABSACkAAAAGAAMAAABTACkAAAAHAAMAAABUACkAAAAIAAMAAABRACgAAAAFAAMAAABSACgAAAAGAAMAAABTACgAAAAHAAMAAABUACgAAAAIAAMAAABVACgAAAAFAAMAAABWACgAAAAGAAMAAABXACgAAAAHAAMAAABYACgAAAAIAAMAAABVACkAAAAFAAMAAABWACkAAAAGAAMAAABXACkAAAAHAAMAAABYACkAAAAIAAMAAABVACoAAAAFAAMAAABWACoAAAAGAAMAAABXACoAAAAHAAMAAABYACoAAAAIAAMAAABZACkAAAAFAAMAAABaACkAAAAGAAMAAABbACkAAAAHAAMAAABcACkAAAAIAAMAAABZACgAAAAFAAMAAABaACgAAAAGAAMAAABbACgAAAAHAAMAAABcACgAAAAIAAMAAABZACoAAAAFAAMAAABaACoAAAAGAAMAAABbACoAAAAHAAMAAABcACoAAAAIAAMAAABdACgAAAAFAAMAAABeACgAAAAGAAMAAABfACgAAAAHAAMAAABgACgAAAAIAAMAAABdACkAAAAFAAMAAABeACkAAAAGAAMAAABfACkAAAAHAAMAAABgACkAAAAIAAMAAABdACoAAAAFAAMAAABeACoAAAAGAAMAAABfACoAAAAHAAMAAABgACoAAAAIAAMAAABhACgAAAAFAAMAAABiACgAAAAGAAMAAABjACgAAAAHAAMAAABkACgAAAAIAAMAAABhACkAAAAFAAMAAABiACkAAAAGAAMAAABjACkAAAAHAAMAAABkACkAAAAIAAMAAABhACoAAAAFAAMAAABiACoAAAAGAAMAAABjACoAAAAHAAMAAABkACoAAAAIAAMAAABlACgAAAAFAAMAAABmACgAAAAGAAMAAABnACgAAAAHAAMAAABoACgAAAAIAAMAAABlACkAAAAFAAMAAABmACkAAAAGAAMAAABnACkAAAAHAAMAAABoACkAAAAIAAMAAABlACoAAAAFAAMAAABmACoAAAAGAAMAAABnACoAAAAHAAMAAABoACoAAAAIAAMAAABpACgAAAAFAAMAAABqACgAAAAGAAMAAABrACgAAAAHAAMAAABsACgAAAAIAAMAAABpACkAAAAFAAMAAABqACkAAAAGAAMAAABrACkAAAAHAAMAAABsACkAAAAIAAMAAABpACoAAAAFAAMAAABqACoAAAAGAAMAAABrACoAAAAHAAMAAABsACoAAAAIAAMAAABtACkAAAAFAAMAAABuACkAAAAGAAMAAABvACkAAAAHAAMAAABwACkAAAAIAAMAAABtACgAAAAFAAMAAABuACgAAAAGAAMAAABvACgAAAAHAAMAAABwACgAAAAIAAMAAABtACoAAAAFAAMAAABuACoAAAAGAAMAAABvACoAAAAHAAMAAABwACoAAAAIAAMAAABxACkAAAAFAAMAAAByACkAAAAGAAMAAABzACkAAAAHAAMAAAB0ACkAAAAIAAMAAABxACgAAAAFAAMAAAByACgAAAAGAAMAAABzACgAAAAHAAMAAAB0ACgAAAAIAAMAAABxACoAAAAFAAMAAAByACoAAAAGAAMAAABzACoAAAAHAAMAAAB0ACoAAAAIAAMAAAB1ACkAAAAFAAMAAAB2ACkAAAAGAAMAAAB3ACkAAAAHAAMAAAB4ACkAAAAIAAMAAAB1ACgAAAAFAAMAAAB2ACgAAAAGAAMAAAB3ACgAAAAHAAMAAAB4ACgAAAAIAAMAAAB5ACgAAAAFAAMAAAB6ACgAAAAGAAMAAAB7ACgAAAAHAAMAAAB8ACgAAAAIAAMAAAB1ACoAAAAFAAMAAAB2ACoAAAAGAAMAAAB3ACoAAAAHAAMAAAB4ACoAAAAIAAMAAAB5ACkAAAAFAAMAAAB6ACkAAAAGAAMAAAB7ACkAAAAHAAMAAAB8ACkAAAAIAAMAAAB5ACoAAAAFAAMAAAB6ACoAAAAGAAMAAAB7ACoAAAAHAAMAAAB8ACoAAAAIAAMAAAB9ACkAAAAFAAMAAAB+ACkAAAAGAAMAAAB/ACkAAAAHAAMAAACAACkAAAAIAAMAAAB9ACgAAAAFAAMAAAB+ACgAAAAGAAMAAAB/ACgAAAAHAAMAAACAACgAAAAIAAMAAAB9ACoAAAAFAAMAAAB+ACoAAAAGAAMAAAB/ACoAAAAHAAMAAACAACoAAAAIAAMAAACBACkAAAAFAAMAAACCACkAAAAGAAMAAACDACkAAAAHAAMAAACEACkAAAAIAAMAAACBACgAAAAFAAMAAACCACgAAAAGAAMAAACDACgAAAAHAAMAAACEACgAAAAIAAMAAACBACoAAAAFAAMAAACCACoAAAAGAAMAAACDACoAAAAHAAMAAACEACoAAAAIAAMAAACFACkAAAAFAAMAAACGACkAAAAGAAMAAACHACkAAAAHAAMAAACIACkAAAAIAAMAAACFACgAAAAFAAMAAACGACgAAAAGAAMAAACHACgAAAAHAAMAAACIACgAAAAIAAMAAACFACoAAAAFAAMAAACGACoAAAAGAAMAAACHACoAAAAHAAMAAACIACoAAAAIAAMAAACJACkAAAAFAAMAAACKACkAAAAGAAMAAACLACkAAAAHAAMAAACMACkAAAAIAAMAAACJACgAAAAFAAMAAACKACgAAAAGAAMAAACLACgAAAAHAAMAAACMACgAAAAIAAMAAACJACoAAAAFAAMAAACKACoAAAAGAAMAAACLACoAAAAHAAMAAACMACoAAAAIAAMAAACNACoAAAAFAAMAAACOACoAAAAGAAMAAACPACoAAAAHAAMAAACQACoAAAAIAAMAAACNACkAAAAFAAMAAACOACkAAAAGAAMAAACPACkAAAAHAAMAAACQACkAAAAIAAMAAACNACgAAAAFAAMAAACOACgAAAAGAAMAAACPACgAAAAHAAMAAACQACgAAAAIAAMAAACRACkAAAAFAAMAAACSACkAAAAGAAMAAACTACkAAAAHAAMAAACUACkAAAAFAAMAAACRACgAAAAFAAMAAACSACgAAAAGAAMAAACTACgAAAAHAAMAAACUACgAAAAFAAMAAACRACoAAAAFAAMAAACSACoAAAAGAAMAAACTACoAAAAHAAMAAACUACoAAAAFAAMAAACVACgAAAAGAAMAAACWACgAAAAHAAMAAACXACgAAAAIAAMAAACVACkAAAAGAAMAAACWACkAAAAHAAMAAACXACkAAAAIAAMAAACYACkAAAAFAAMAAACZACkAAAAFAAMAAACaACkAAAAGAAMAAACbACkAAAAHAAMAAACYACgAAAAFAAMAAACZACgAAAAFAAMAAACaACgAAAAGAAMAAACbACgAAAAHAAMAAACVACoAAAAGAAMAAACWACoAAAAHAAMAAACXACoAAAAIAAMAAACYACoAAAAFAAMAAACZACoAAAAFAAMAAACaACoAAAAGAAMAAACbACoAAAAHAAMAAACcACgAAAAIAAMAAACcACkAAAAIAAMAAACcACoAAAAIAAMAAAA=")
tile_set = SubResource("TileSet_rv0fw")

[node name="EndLVL" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndLVL"]
position = Vector2(2469, 530)
shape = SubResource("RectangleShape2D_4nwc7")

[node name="Chapter1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chapter1"]
position = Vector2(325, 564.125)
shape = SubResource("RectangleShape2D_h8j34")

[node name="Cave" type="Sprite2D" parent="."]
position = Vector2(2918, 699)
scale = Vector2(2, 2)
texture = ExtResource("12_h8j34")

[connection signal="body_entered" from="Arena1" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="EndLVL" to="." method="_on_end_lvl_body_entered"]
[connection signal="body_entered" from="Chapter1" to="." method="_on_chapter_1_body_entered"]
